# trainer-monitor

./: AGENT.md  Cargo.toml
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs
crates/common/: Cargo.toml  build.rs
crates/common/proto/: protocol.proto
crates/common/src/: handshake.rs  lib.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: main.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: main.rs
src/: main.rs
