[workspace]
resolver = "2"
members = [
    "crates/monitor",
    "crates/bridge",
    "crates/common",
    "crates/rpc-server",
]

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tonic = "0.12.3"
prost = "0.13.4"
prost-derive = "0.13.4"
tonic-build = "0.12.3"
tokio-stream = "0.1.18"
