[package]
name = "common"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored = "3.0.0"
