[package]
name = "rpc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "net"] }
tonic.workspace = true
prost.workspace = true
common = { path = "../common" }
serde_json.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
